# uniffi-napi

./: .gitignore  Cargo.toml  README.md  auto-refactor.md  index.d.ts  index.js  lib.js  package-lock.json  package.json
docs/: api.md  codegen-reference.md  design-uniffi-js.md
docs/superpowers/plans/: 2026-03-10-uniffi-napi.md  2026-03-16-foreign-future.md  2026-03-16-uniffi-fixture.md
docs/superpowers/specs/: 2026-03-10-uniffi-napi-design.md  2026-03-16-foreign-future-design.md  2026-03-16-uniffi-fixture-design.md
fixtures/uniffi-fixture-simple/: Cargo.toml
fixtures/uniffi-fixture-simple/src/: lib.rs
src/: callback.rs  cif.rs  ffi_c_types.rs  ffi_type.rs  fn_pointer.rs  lib.rs  library.rs  marshal.rs  napi_utils.rs  register.rs  structs.rs
test_lib/src/: lib.rs
tests/: callbacks.test.mjs  fixture.test.mjs  open_close.test.mjs  rust_buffer.test.mjs  rust_call_status.test.mjs  scalars.test.mjs  threading.test.mjs
tests/helpers/: async.mjs  converters.mjs
