[package]
name = "uniffi-napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16", default-features = false, features = ["napi6"] }
napi-derive = "2.16"
dlopen2 = "0.7"
libffi = "5.0"
libffi-sys = "4.0"

[build-dependencies]
napi-build = "2.1"
